Thu Apr 23 08:06:25 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * bin/ciao_tests.lst:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.cpp:
        * tests/IDL3_to_XMI/IDL2XMI_Test/IDL2XMI_Test.mpc:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.h:
        * tests/IDL3_to_XMI/IDL2XMI_Test/xmlvalidator.cpp:
        * tests/IDL3_to_XMI/IDL2XMI_Test/run_test.pl:

          Added and enabled a test for bug#3616. It's marked as
          unfixed since currently there is a problem with XML
          generation for anonymous types.

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:

          Fixed a compilation error for bug#3607.

Wed Apr 22 14:56:08 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/IDL3_to_XMI/XMI_For_Array/test.idl:
        * tests/IDL3_to_XMI/XMI_For_Array/XMI.dtd:
        * tests/IDL3_to_XMI/XMI_For_Array/run_test.pl:
        * tests/IDL3_to_XMI/XMI.dtd:
        * tests/IDL3_to_XMI/XMI_For_Included_File/XMI.dtd:
        * tests/IDL3_to_XMI/XMI_For_Included_File/run_test.pl:
        * tests/IDL3_to_XMI/XMI_For_Sequence/test.idl:
        * tests/IDL3_to_XMI/XMI_For_Sequence/XMI.dtd:
        * tests/IDL3_to_XMI/XMI_For_Sequence/run_test.pl:
        * tests/IDL3_to_XMI/Bug_3607_Regression/test.idl:
        * tests/IDL3_to_XMI/Bug_3607_Regression/XMI.dtd:
        * tests/IDL3_to_XMI/Bug_3607_Regression/run_test.pl:

          Extended and updated the tests. Now they share XMI.dtd which
          is the same for all of them.

Wed Apr 22 14:34:02 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/be_global.cpp:
        * tools/IDL3_to_XMI/Literals.cpp:
        * tools/IDL3_to_XMI/Literals.h:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:

          Fixed bug#3607. This also fixes a number of other things. In
          particular XML generation for module reopening and forward